--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
 <head>
-  <meta charset="utf-8">
-  <title>FietsvakantiesSsg</title>
+  <title>Fietsvakanties over het Europese continent</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+  <link rel="stylesheet" type="text/css" href="css/stdtheme.css">
 </head>
 <body>
   <app-root></app-root>
